building makemore part1

--- a/build_makemore.ipynb
+++ b/build_makemore.ipynb
@@ -1023,11 +1023,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "id": "4f848127",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kan.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\".join(out))"
+   ]
   }
  ],
  "metadata": {
